--- a/data/configuration.yaml
+++ b/data/configuration.yaml
@@ -9,7 +9,7 @@ mqtt:
   # MQTT base topic for zigbee2mqtt MQTT messages
   base_topic: zigbee2mqtt
   # MQTT server URL
-  server: 'mqtt://localhost'
+  server: 'mqtt://mosquitto'
   # MQTT server authentication, uncomment if required:
   # user: my_user
   # password: my_password
@@ -18,3 +18,7 @@ mqtt:
 serial:
   # Location of CC2531 USB sniffer
   port: /dev/ttyACM0
+
+
+advanced:
+  log_level: error
