--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,9 +5,10 @@ services:
     # mqtt broker
     mosquitto:
         build: mosquitto
-#        ports:
-#            - "1883:1883"
-#            - "9001:9001"
+        restart: always
+        ports:
+            - "1883:1883"
+            - "9001:9001"
 
     # zigbee to mqtt bridge
     zigbee2mqtt:
@@ -20,7 +21,6 @@ services:
         devices:
             - /dev/ttyACM0:/dev/ttyACM0
         restart: always
-        network_mode: host
         privileged: true
         environment:
             - TZ=Europe/Prague
