--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
         depends_on: [mosquitto]
         image: koenkk/zigbee2mqtt
         volumes:
-            - ./data:/app/data
+            - /tmp/zigbee2mqtt:/app/data
             - /run/udev:/run/udev:ro
         devices:
             - /dev/ttyACM0:/dev/ttyACM0
