--- a/orangepi/configuration/configuration.yaml
+++ b/orangepi/configuration/configuration.yaml
@@ -2,12 +2,14 @@ permit_join: false
 homeassistant: false
 mqtt:
   base_topic: zigbee2mqtt
-  server: 'mqtt://mosquitto'
+  server: 'mqtt://localhost'
   # user: my_user
   # password: my_password
 
 serial:
   port: /dev/ttyACM0
+
+devices: devices.yaml
 
 advanced:
   network_key: [1, 2, 3, 4, 5, 6, 77, 88, 99, 98, 97, 96, 95, 94, 93, 92]
