--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ services:
     mosquitto:
         build: mosquitto
         restart: always
+        network_mode: host
         ports:
             - "1883:1883"
             - "9001:9001"
@@ -30,4 +31,4 @@ services:
 #        depends_on: [mosquitto]
 #        build: mqtt2udp
 #        restart: always
-    
+
