--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,8 +27,8 @@ services:
             - TZ=Europe/Prague
 
     # mqtt to udp bridge
-#    mqtt2udp:
-#        depends_on: [mosquitto]
-#        build: mqtt2udp
-#        restart: always
+    mqtt2udp:
+        depends_on: [mosquitto]
+        build: mqtt2udp
+        restart: always
 
