--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
         container_name: zigbee2mqtt
         depends_on: [mosquitto]
         network_mode: host
-        image: koenkk/zigbee2mqtt
+        image: koenkk/zigbee2mqtt:latest-dev
         volumes:
             - /zigbee2mqtt/zigbee2udp/configuration:/app/data
             - /run/udev:/run/udev:ro
