--- a/loxone2zigbee/Dockerfile
+++ b/loxone2zigbee/Dockerfile
@@ -3,7 +3,8 @@ FROM python:3-alpine
 RUN python -m pip install --upgrade pip
 RUN pip3 install paho-mqtt
 
-COPY mqtt2udp.py /bridge.py
+COPY loxone2zigbee.py /bridge.py
 
+EXPOSE 4445
 ENTRYPOINT [ "python3", "/bridge.py" ]
 
