--- a/configuration/configuration.yaml.template
+++ b/configuration/configuration.yaml.template
@@ -2,7 +2,7 @@ permit_join: false
 homeassistant: false
 mqtt:
   base_topic: zigbee
-  server: 'mqtt://localhost'
+  server: 'mqtt://%MQTT_ADDRESS%'
   # user: my_user
   # password: my_password
 
