--- a/zigbee2loxone/Dockerfile
+++ b/zigbee2loxone/Dockerfile
@@ -3,7 +3,7 @@ FROM python:3-alpine
 RUN python -m pip install --upgrade pip
 RUN pip3 install paho-mqtt
 
-COPY mqtt2udp.py /bridge.py
+COPY zigbee2loxone.py /bridge.py
 
 ENTRYPOINT [ "python3", "/bridge.py" ]
 
