--- a/configuration/configuration.yaml.template
+++ b/configuration/configuration.yaml.template
@@ -1,7 +1,7 @@
 permit_join: false
 homeassistant: false
 mqtt:
-  base_topic: zigbee
+  base_topic: zigbee2mqtt
   server: 'mqtt://%MQTT_ADDRESS%'
   # user: my_user
   # password: my_password
