--- a/configuration/configuration.yaml.template
+++ b/configuration/configuration.yaml.template
@@ -1,7 +1,7 @@
 permit_join: false
 homeassistant: false
 mqtt:
-  base_topic: zigbee2mqtt
+  base_topic: zigbee
   server: 'mqtt://%MQTT_ADDRESS%'
   # user: my_user
   # password: my_password
@@ -14,4 +14,5 @@ devices: devices.yaml
 advanced:
   cache_state: false
   log_directory: /tmp/zigbee2mqtt/%TIMESTAMP%
+  network_key: [1, 2, 3, 4, 5, 6, 77, 88, 99, 98, 97, 96, 95, 94, 93, 92]
 
