--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,8 @@ services:
         network_mode: host
         image: koenkk/zigbee2mqtt:latest-dev
         volumes:
-            - /zigbee2mqtt/zigbee2udp/configuration:/app/data
+            - ./configuration:/app/data                                 # uncomment when running on ssd/hdd
+            # - /zigbee2mqtt/zigbee2udp/configuration:/app/data         # uncomment when running on RPi
             - /run/udev:/run/udev:ro
         devices:
             - /dev/ttyACM0:/dev/ttyACM0
