--- a/loxonebridge/Dockerfile
+++ b/loxonebridge/Dockerfile
@@ -1,6 +1,7 @@
 FROM groovy:3.0-jre13
 
 COPY loxonebridge.groovy /
+RUN groovy /loxonebridge.groovy init
 
 ENTRYPOINT [ "groovy", "/loxonebridge.groovy" ]
 
